# jet-article

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app-catalog/: .gitignore  Readme.md  build.gradle.kts
app-catalog/src/main/: AndroidManifest.xml
app-catalog/src/main/assets/: address.html  code.html  image.html  list.html  quote.html  table.html  text.html  title.html
app-catalog/src/main/res/values/: strings.xml  themes.xml
benchmark/: build.gradle.kts
benchmark-debug-app/: build.gradle.kts
benchmark-mikro/: build.gradle.kts
benchmark-mikro/src/main/assets/: mapbox.html
benchmark-test-app/: build.gradle.kts
example-app/: build.gradle.kts
example-app/src/main/: AndroidManifest.xml
example-app/src/main/assets/simple-examples/: android.html  default.html  gallery.html  mapbox.html  simple.html
example-app/src/main/res/values/: strings.xml  themes.xml
example-debug-app/: build.gradle.kts
example-debug-app/src/main/: AndroidManifest.xml
example-debug-app/src/main/assets/articles/: ascod.html  finex.html  test.html  wikipedia.html  zing.html
example-debug-app/src/main/assets/benchmark/: ignore-test.html  links-test.html  performance-test.html  text-unsupported.html
example-dev-blog-app/: .gitignore  Readme.md  build.gradle.kts  proguard-rules.pro
example-dev-blog-app/src/main/: AndroidManifest.xml
example-dev-blog-app/src/main/assets/: article-with-code.html  article.html  index.html
example-test-app/: build.gradle.kts
example-test-app/src/main/: AndroidManifest.xml
example-test-app/src/main/assets/: android.html  default.html  elements-test.html  simple.html  warm-up.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jet-article/: .gitignore  build.gradle.kts  consumer-rules.pro  doxyfile  proguard-rules.pro
jet-article/src/androidTest/assets/: android-docs-material-design-guideline.html  android-docs-theme.html  exclude-1.html  exclude-2.html  links.html  span.html
jet-article/src/main/: AndroidManifest.xml
jet-article/src/main/cpp/: AnalyzerJNI.cpp  BodyProcessor.cpp  BodyProcessor.h  CMakeLists.txt  ContentParser.cpp  ContentParser.h  ParserJNI.cpp  UtilsJNI.cpp
jet-article/src/main/cpp/core/: BodyProcessor.cpp  BodyProcessor.h  CMakeLists.txt  ContentAnalyzer.cpp  ContentAnalyzer.h  ContentFilter.cpp  ContentFilter.h  ContentParser.cpp  ContentParser.h  ParserComponent.h
jet-article/src/main/cpp/utils/: CMakeLists.txt  Constants.h  ExcludeRule.cpp  ExcludeRule.h  IgnoreRule.cpp  IgnoreRule.h  IndexWrapper.cpp  IndexWrapper.h  Rule.cpp  Rule.h  StringRef.cpp  Utils.cpp  Utils.h
jet-article/src/main/res/values/: strings.xml
jet-html-article/: build.gradle.kts
jet-html-article-old/: build.gradle.kts  consumer-rules.pro
jet-html-article/src/debug/assets/: test.html
jet-html-article/src/main/: AndroidManifest.xml
jet-html-article/src/main/cpp/: BodyProcessor.cpp  BodyProcessor.h  CMakeLists.txt  ContentParser.cpp  ContentParser.h  LibraryJNI.cpp  ParserJNI.cpp
jet-html-article/src/main/cpp/utils/: CMakeLists.txt  Constants.h  IndexWrapper.cpp  IndexWrapper.h  StringRef.h  Utils.cpp  Utils.h
(+316 files in other folders)
